Bug 238182 - kdebindings fails to buid in smoke/nepomukquery
Summary: kdebindings fails to buid in smoke/nepomukquery
Status: RESOLVED FIXED
Alias: None
Product: bindings
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: bindings-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-19 15:53 UTC by Tomas Vavra
Modified: 2010-05-19 16:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kdebindings build log (174.69 KB, text/x-log)
2010-05-19 16:13 UTC, Tomas Vavra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tomas Vavra 2010-05-19 15:53:15 UTC
Version:           SVN (using Devel)
Compiler:          gcc version 4.4.4 (Debian 4.4.4-1) 
OS:                Linux
Installed from:    Compiled sources

Kdebindings fails to compile for quit a long time (more then month) from trunk SVN.

I will attach build long and I am open to any test
Comment 1 Arno Rehn 2010-05-19 16:05:00 UTC
SVN commit 1128517 by arnorehn:

Make nepomukquery compile again.

BUG:238182

 M  +3 -0      nepomukquery_includes.h  
 M  +1 -0      smokeconfig.xml  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1128517
Comment 2 Tomas Vavra 2010-05-19 16:13:46 UTC
Created attachment 43720 [details]
kdebindings build log
Comment 3 Tomas Vavra 2010-05-19 16:14:24 UTC
Upload build log to make it more komplex
Comment 4 Arno Rehn 2010-05-19 16:28:35 UTC
As stated above, this is now fixed in trunk. No need to post build logs anymore :)