Make nepomukquery compile again.

BUG:238182

svn path=/trunk/KDE/kdebindings/smoke/; revision=1128517