nepomukquery/nepomukquery_includes.h
@@ -1,6 +1,7 @@
 #include <nepomuk/term.h>
 #include <nepomuk/negationterm.h>
 #include <nepomuk/orterm.h>
+#include <nepomuk/optionalterm.h>
 #include <nepomuk/andterm.h>
 #include <nepomuk/comparisonterm.h>
 #include <nepomuk/simpleterm.h>
@@ -13,3 +14,5 @@
 #include <nepomuk/result.h>
 #include <nepomuk/queryserviceclient.h>
 #include <nepomuk/queryparser.h>
+
+#include <nepomuk/variant.h>
